--- a/docs/source/index.html.md.erb
+++ b/docs/source/index.html.md.erb
@@ -1,5 +1,7 @@
 ---
-title: GOVUK Frontend Express
+title: Manage your Civil Cases (MCC)
+last_reviewed_on: 2025-04-29
+review_in: 6 weeks
 ---
 
 <!-- This means open the file documentation/index.html as the entry point -->
