--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,2 @@
-@import "../../node_modules/govuk-frontend/dist/govuk/index";
+@import "govuk-frontend/dist/govuk/index";
+@import "@ministryofjustice/frontend/moj/all";
