--- a/views/base.njk
+++ b/views/base.njk
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block bodyStart %}
-  <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+  <script nonce="{{ cspNonce }}">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
   {# cookie policy #}
 {% endblock %}
 
