If applied, these make updates based on pairing session. This re-orders some of the folders and updates name of routes

--- a/views/base.njk
+++ b/views/base.njk
@@ -8,7 +8,7 @@
 {% block pageTitle %}{{config.SERVICE_NAME}} – GOV.UK{% endblock %}
 
 {% block head %}
-  <link rel="stylesheet" href="css/{{getAsset('main','css')}}">
+  <link rel="stylesheet" href="/css/{{getAsset('main','css')}}">
   <meta name="description" content="{{config.SERVICE_NAME}}">
   <meta name="keywords" content="GOV.UK, govuk, gov, government, uk, frontend, ui, user interface, jinja, python, flask, port, template, templating, macro, component, design system, html, forms, wtf, wtforms, widget, widgets, demo, example">
   <meta name="author" content="{{config.DEPARTMENT_NAME}}">
@@ -44,10 +44,10 @@
   }) }}
   {{ govukServiceNavigation({
   serviceName: config.SERVICE_NAME,
-  serviceUrl: "/cases-new",
+  serviceUrl: "/cases/new",
   navigation: [
     {
-      href: "/cases-new",
+      href: "/cases/new",
       text: "Your cases",
       active: true
     },
