--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -23,7 +23,5 @@
       basePath: "/cases/new"
     }) }}
 {% else %}
-  <div class="govuk-inset-text">
-    <p>No new cases found.</p>
-  </div>
+  <p>There are no new cases.</p>
 {% endif %}
