--- a/views/cases/index.njk
+++ b/views/cases/index.njk
@@ -28,6 +28,7 @@
     containerId: "cases-tab-container",
     casesData: casesData,
     sortOrder: sortOrder,
+    pagination: pagination,
     tabs: [
       {
         id: "new",
