--- a/views/components/sortableTableComponent.njk
+++ b/views/components/sortableTableComponent.njk
@@ -11,9 +11,9 @@
   - Full accessibility compliance with aria-sort attributes
 
   Usage:
-  {% from "components/sortableTable.njk" import sortableTable %}
+  {% from "components/sortableTableComponent.njk" import sortableTableComponent %}
 
-  {{ sortableTable({
+  {{ sortableTableComponent({
     id: "cases-table",
     caption: "New cases",
     classes: "custom-table-class",
@@ -66,7 +66,7 @@
 
 {%- from "govuk/components/table/macro.njk" import govukTable -%}
 
-{% macro sortableTable(options) %}
+{% macro sortableTableComponent(options) %}
   {# Build the head array for govukTable #}
   {% set tableHead = [] %}
   {% for column in options.columns %}
