Disables client side sorting

--- a/views/components/sortableTableComponent.njk
+++ b/views/components/sortableTableComponent.njk
@@ -162,8 +162,7 @@
     caption: options.caption,
     classes: options.classes,
     attributes: {
-      id: options.id,
-      "data-module": "moj-sortable-table"
+      id: options.id
     },
     head: tableHead,
     rows: tableRows
