If applied, this adds the client details pages, if opened via their respective tabs i.e new opened, closed, accepted.
It has comments in the routes, about ideas of what data to pass around in the API call.

--- a/views/base.njk
+++ b/views/base.njk
@@ -34,7 +34,7 @@
     navigation: {
       label: "Account navigation",
       items: [{
-        text: "ramona.zoro@law.com",
+        text: "roronoa.zoro@law.com",
         href: "#"
       }, {
         html: "<strong>Sign out</strong>",
@@ -66,6 +66,7 @@
     },
     html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'
   }) }}
+  {% block backLink %}{% endblock %}
 {% endblock %}
 
 {% block content %}
