--- a/views/cases/_opened-partial.njk
+++ b/views/cases/_opened-partial.njk
@@ -13,7 +13,7 @@
       id: "opened-cases-table",
       data: casesData,
       columns: [
-        { key: "fullName", text: "Name", link: "#" },
+        { key: "fullName", text: "Name", link: "opened/:caseReference/client-details" },
         { key: "caseReference", text: "Case ID" },
 				{ key: "dateOfBirth", text: "Date of Birth" },
         { key: "refCode", text: "Details" },
