If applied, this links up the data, based on the specific client details clicked.

--- a/views/cases/_accepted-partial.njk
+++ b/views/cases/_accepted-partial.njk
@@ -13,7 +13,7 @@
       id: "accepted-cases-table",
       data: casesData,
       columns: [
-        { key: "fullName", text: "Name", link: "accepted/:caseReference/client-details" },
+        { key: "fullName", text: "Name", link: "accepted/{{caseReference}}/client-details" },
         { key: "caseReference", text: "Case ID" },
 				{ key: "dateOfBirth", text: "Date of birth" },
         { key: "refCode", text: "Details" },
