--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -13,7 +13,7 @@
       id: "new-cases-table",
       data: casesData,
       columns: [
-        { key: "fullName", text: "Name", link: "new/:caseReference/client-details" },
+        { key: "fullName", text: "Name", link: "new/{{caseReference}}/client-details" },
         { key: "caseReference", text: "Case ID" },
 				{ key: "dateOfBirth", text: "Date of Birth" },
         { key: "refCode", text: "Details" },
