--- a/views/cases/_closed-client-details-partial.njk
+++ b/views/cases/_closed-client-details-partial.njk
@@ -3,10 +3,10 @@
   classes: "govuk-tag--grey govuk-!-margin-bottom-2"
 }) }}
 
-<h2 class="govuk-heading-m govuk-!-margin-bottom-1">Date received: <span class="govuk-body-l">{{ client.dateReceived or "30 January 2025" }}</span></h2>
-<h2 class="govuk-heading-m govuk-!-margin-bottom-7">LAA Reference: <span class="govuk-body-l">{{ client.laaReference or "3000742" }}</span></h2>
+<h2 class="govuk-heading-m govuk-!-margin-bottom-1">Date received: <span class="govuk-body-l">{{ client.dateReceived | formatDate }}</span></h2>
+<h2 class="govuk-heading-m govuk-!-margin-bottom-7">LAA Reference: <span class="govuk-body-l">{{ client.laaReference or "Not provided" }}</span></h2>
 
-<div class="govuk-button-group">
+<div class="govuk-button-group"> 
   {{ govukButton({
     text: "Reopen case"
   }) }}
