If applied, this removes the pointer events for the e-mail of user - giving the impression it is plain text and not a link.

--- a/views/base.njk
+++ b/views/base.njk
@@ -35,7 +35,9 @@
       label: "Account navigation",
       items: [{
         text: "ramona.zoro@law.com",
-        href: "#"
+        attributes: {
+          'style': 'pointer-events: none;'
+        }
       }, {
         html: "<strong>Sign out</strong>",
         href: "#"
