Fixes sorting in other pages

--- a/views/cases/_accepted-partial.njk
+++ b/views/cases/_accepted-partial.njk
@@ -21,7 +21,8 @@
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/accepted"
+      basePath: "/cases/accepted",
+      currentPage: currentPage
     }) }}
 
   {# Render pagination if pagination data is available #}
