--- a/views/cases/_closed-partial.njk
+++ b/views/cases/_closed-partial.njk
@@ -21,7 +21,8 @@
       ],
       sortBy: "dateClosed",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/closed"
+      basePath: "/cases/closed",
+      currentPage: currentPage
     }) }}
 
   {# Render pagination if pagination data is available #}
