--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -21,7 +21,8 @@
       ],
       sortBy: "dateReceived",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/new"
+      basePath: "/cases/new",
+      currentPage: currentPage
     }) }}
 
   {# Render pagination if pagination data is available #}
