--- a/views/cases/_opened-partial.njk
+++ b/views/cases/_opened-partial.njk
@@ -21,7 +21,8 @@
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/opened"
+      basePath: "/cases/opened",
+      currentPage: currentPage
     }) }}
 
   {# Render pagination if pagination data is available #}
