--- a/views/cases/index.njk
+++ b/views/cases/index.njk
@@ -41,6 +41,7 @@
     casesData: casesData,
     sortOrder: sortOrder,
     pagination: pagination,
+    currentPage: currentPage,
     tabs: [
       {
         id: "new",
