--- a/views/components/tabComponent.njk
+++ b/views/components/tabComponent.njk
@@ -79,6 +79,7 @@
           {% set casesData = options.casesData %}
           {% set sortOrder = options.sortOrder %}
           {% set pagination = options.pagination %}
+          {% set currentPage = options.currentPage %}
           {% include tab.partial %}
         {% elif tab.content %}
           {{ tab.content | safe }}
